# spinningist

./: .env.example  README.md  pyproject.toml
spinningist_project/api/: board_api.py
spinningist_project/data/: user_info.py
spinningist_project/pages/: cart_page.py  main_page.py  registration_page.py  spinning_page.py
tests/: conftest.py  test_simple.py
tests/auth_ui/: conftest.py  test_authorization.py  test_main_page.py
tests/ui/: conftest.py  test_cart_page.py  test_simple.py  test_spinning_page.py
utilites/: attach.py  logger.py
