[tool.poetry]
name = "spinningist"
version = "0.1.0"
description = ""
authors = ["Dimitri Maksimov <dmitry-maksimov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "8.3.3"
selene = "2.0.0rc9"
allure-pytest = "^2.13.5"
python-dotenv = "1.0.1"


[tool.pytest.ini_options]
addopts = [
    "-s",
    "-v",
]

testpaths = [
    "tests/ui",
    "tests/auth_ui",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
